# zodyak-western-calculation-api

./: .gitignore  Dockerfile  NOTICE  PUBLIC_DEPLOYMENT_CHECKLIST.md  Procfile  README.md  env.public.example  pyproject.toml
examples/: astrocartography.json  davison.json  electional.json  firdaria.json  forecast-layers.json  horary.json  lunar-return.json  mundane.json  natal.json  primary-directions.json  progressions.json  rectification.json  relocation.json  solar-arc.json  solar-return.json  transits.json
tests/: test_app_contract.py  test_client.py  test_readiness.py
zodyak_western_calculation_api/: __init__.py  app.py  client.py  readiness.py  serve.py  western_astrocartography.py  western_chart.py  western_composite.py  western_davison.py  western_electional.py  western_firdaria.py  western_fixed_stars.py  western_horary.py  western_local_space.py  western_lunar_return.py  western_midpoints.py  western_mundane.py  western_parans.py  western_primary_directions.py  western_progressions.py  western_rectification.py  western_relocation.py  western_solar_arc.py  western_solar_return.py  western_synastry.py  western_transit.py
