[project]
name = "zodyak-western-calculation-api"
version = "0.1.0"
description = "AGPL Western astrology technical calculation API."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
  "Flask>=3,<4",
  "gunicorn>=21,<24",
  "pyswisseph>=2.10,<3",
]

[project.urls]
SwissEphemeris = "https://www.astro.com/swisseph/"

[project.scripts]
western-calc-readiness = "zodyak_western_calculation_api.readiness:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zodyak_western_calculation_api*"]
